manifests/colocated/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gptoss-route
  namespace: kpouget-dev
spec:
  parentRefs:
    - name: infra-gptoss-inference-gateway
      namespace: kpouget-dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: inference.networking.k8s.io
          kind: InferencePool
          name: gaie-gptoss
          port: 8000
